# FitManager

./: .gitignore  build.gradle  gradle.properties  import-summary.txt  settings.gradle
annotation/: .gitignore
app/: beiying.jks  build.gradle  lint.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ab_background_textured_carddemo.xml  actionbar_background.xml  activated_background_item_card.xml  btn_cab_done_carddemo.xml  card_item_background.xml  card_menu_button_expand.xml  card_menu_button_other.xml  card_menu_button_other_add.xml  card_menu_button_other_dismiss.xml  carddemo_mayknow_add.xml  carddemo_mayknow_add_rectangle_normal.xml  carddemo_mayknow_add_rectangle_pressed.xml  demo_card_background_color1.xml  demo_card_background_color2.xml  demo_card_background_color3.xml  demo_card_background_color4.xml  demo_card_background_color5.xml  demo_card_selector_color1.xml  demo_card_selector_color2.xml  demo_card_selector_color3.xml  demo_card_selector_color4.xml  demo_card_selector_color5.xml  demo_item_selector.xml  demo_native_item_selector.xml  demo_purchase.xml  democard_my_shadow.xml  divide_line.xml  featureview_bg.xml  hd_fab_ripple.xml  launch_bg.xml  pressed_background_carddemo.xml  pressed_background_item_card.xml  progress_horizontal_carddemo.xml  ratingbar_small_holo_dark.xml  rectangle.xml  selectable_background_carddemo.xml  session_tag_chip.xml  spinner_background_ab_carddemo.xml  tab_indicator_ab_carddemo.xml
app/src/main/res/drawable-v21/: hd_fab_ripple.xml  popup_item_background.xml  session_tag_chip.xml
app/src/main/res/layout/: main_activity_native.xml  navdrawer.xml  navdrawer_content.xml  navdrawer_item.xml  navdrawer_separator.xml  notification_item.xml  toolbar_actionbar.xml  toolbar_actionbar_extended.xml  toolbar_actionbar_with_headerbar.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values-v21/: attrs.xml  styles.xml
avplayer/: CMakeLists.txt  build.gradle
avplayer/libs/includes/libavutil/: ffversion.h
avplayer/src/androidTest/java/com/beiying/avplayer/: ExampleInstrumentedTest.java
avplayer/src/main/: AndroidManifest.xml
avplayer/src/main/cpp/: algorithm.cpp  avplayer.c  media_info.c
avplayer/src/main/java/com/beiying/avplayer/: BYAvPlayerView.java
avplayer/src/main/res/values/: strings.xml
avplayer/src/test/java/com/beiying/avplayer/: ExampleUnitTest.java
base/: build.gradle
base/src/main/: AndroidManifest.xml
base_net/: build.gradle  readme.md
base_net/src/main/: AndroidManifest.xml
buildSrc/: build.gradle
compiler/: build.gradle
core/: build.gradle  proguard-rules.pro
core/src/main/: AndroidManifest.xml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
fit_mvp/: build.gradle
fit_mvp/src/main/: AndroidManifest.xml
fit_mvvm/: build.gradle
fit_mvvm/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
leographics/: build.gradle
leographics/src/main/: AndroidManifest.xml
module-shop/: build.gradle
module-shop/src/main/: AndroidManifest.xml
module-video/: build.gradle
module-video/src/main/: AndroidManifest.xml
plugin_core/: build.gradle
plugin_core/src/main/: AndroidManifest.xml
third_lib/: build.gradle
(+474 files in other folders)
